# MemoPreview

./: CMakeLists.txt  Config.h.in  LatexCompileService.cpp  LatexCompileService.h  LatexmkManager.cpp  LatexmkManager.h  MainWindow.cpp  MainWindow.h  PROJECT_STRUCTURE.md  README.md  README_zh.md  SettingsDialog.cpp  SettingsDialog.h  SettingsUtils.cpp  SettingsUtils.h  SuperMemoGateway.h  SuperMemoIeExtractor.cpp  SuperMemoIeExtractor.h  SuperMemoWindowUtils.h  TemplateEditDialog.cpp  TemplateEditDialog.h  TemplateService.h  WindowEventMonitor.cpp
docs/runbooks/: regression-checklist.md
include/: MainWindow.h  PreviewSyncService.h  RetryBackoffPolicy.h  SuperMemoGateway.h  SuperMemoIeExtractor.h  SuperMemoWindowInfo.h  SuperMemoWindowUtils.h  TemplateEditDialog.h  WriteDebouncePolicy.h
src/: LatexCompileService.cpp  LatexmkManager.cpp  LogDialog.cpp  MainWindow.cpp  PreviewSyncService.cpp  RetryBackoffPolicy.cpp  SettingsUtils.cpp  SuperMemoGateway.cpp  SuperMemoIeExtractor.cpp  SuperMemoWindowUtils.cpp  TemplateService.cpp  WriteDebouncePolicy.cpp  main.cpp
src/core/: SuperMemoIeExtractor.cpp  WindowEventMonitor.h
src/ui/: LogDialog.h  MainWindow.cpp  TemplateEditDialog.cpp
src/utils/: SettingsUtils.cpp  SuperMemoWindowInfo.h  SuperMemoWindowUtils.cpp
tests/: MemoPreviewTests.cpp  SuperMemoLiveDiagnostics.cpp
